cmake_minimum_required(VERSION 3.1)
project(using_task_library_not_picking_up_not_directly_used_dependencies_publisher VERSION 0.0)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.orogen/config")
include(using_task_library_not_picking_up_not_directly_used_dependencies_publisherBase)

# FIND_PACKAGE(KDL)
# FIND_PACKAGE(OCL)

